--- a/style/sections/sectionSlider.scss
+++ b/style/sections/sectionSlider.scss
@@ -37,9 +37,6 @@
   transform: rotate(-90deg); 
 }
 
-.table {
-  display: none;
-}
 
 .slider__img {
   width: 500px;
@@ -128,6 +125,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+    &:hover {
+      background-color: #e35028;
+    }
+
+    &:hover .table {
+      display: block;
+    }
 }
 
 .dropdown__title {
@@ -139,4 +144,39 @@
   color: $white;
   text-transform: uppercase;
   margin-top: 5px;
+}
+
+//table
+
+.table {
+  position: absolute;
+  left: 100%;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  display: none;
+  transition: all 0.3s;
+}
+
+.table__content {
+  font-weight: 500;
+  padding-right: 65px;
+  text-align: center;
+}
+
+.table__icon {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.table__weight {
+  white-space: nowrap;
+  padding-right: 20px;
+}
+
+.table__row:first-of-type > .table__icon, .table__row:last-of-type > .table__icon {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
