--- a/style/layout/settings.scss
+++ b/style/layout/settings.scss
@@ -43,6 +43,7 @@ a {
 .main-section {
   height: 100vh;
   min-height: 650px;
+  min-width: $container-width;
 }
 
 .container {
@@ -50,4 +51,7 @@ a {
 
 }
 
+.hide {
+  display: none;
+}
 
