--- a/style/sections/sectionForm.scss
+++ b/style/sections/sectionForm.scss
@@ -80,6 +80,92 @@
   font-weight: 300;
 }
 
+//chekbox
+
+.delivery__label_chekbox {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.delivery__chekbox-check {
+  width: 15px;
+  height: 15px;
+  background-color: $white;
+  display: inline-block;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.delivery__checkbox {
+  display: none;
+
+      &:checked + .delivery__chekbox-check>.delivery__chek-icon {
+        display: block;
+      }
+}
+
+.delivery__chek-icon {
+  width: 13px;
+  height: 13px;
+  fill: #e45028;
+  display: none;
+}
+
+//radio button
+
+.delivery__type-of-pay {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;  
+}
+
+.delivery__radio {
+  display: none;
+
+      &:checked + .delivery__radio-check>.delivery__radio-icon {
+            display: block;
+          }
+}
+
+.delivery__label_radio {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  margin-right: 20px;
+}
+
+.delivery__radio-check {
+  width: 15px;
+  height: 15px;
+  background-color: $white;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+
+.delivery__radio-icon {
+  width: 7px;
+  height: 7px;
+  background-color: #e45028;
+  border-radius: 50%; 
+  display: none; 
+}
+
+
+
+
 //modal window
 
 .modal {
@@ -99,12 +185,15 @@
 
 .modal__message {
   background-color: $white;
-  text-align: center;
-  padding: 20px;
-  border-radius: 5px;
+  border-radius: 5px; 
 }
 
-.modal__content {
+.modal__message_form {
+  text-align: center;
+  padding: 20px;
+}
+
+.modal__content_form {
   margin-bottom: 20px;
 }
 
