--- a/style/sections/sectionFeedback.scss
+++ b/style/sections/sectionFeedback.scss
@@ -26,7 +26,7 @@
 }
 
 .feedback__content {
-  padding: 20px 45px;
+  padding: 45px 20px;
   background-color: rgba(20, 20, 20, 0.7);
   height: 100%;
   visibility: hidden;
@@ -58,8 +58,10 @@
   height: 35px;
   text-transform: uppercase;
   font-weight: 500;
-  font-size: 13px;  
+  font-size: 13px;
+  font-family: ubuntu, Arial, sans-serif;  
   color: $white;
+
 }
 
 .feedback__item_first {
