--- a/style/sections/sectionHero.scss
+++ b/style/sections/sectionHero.scss
@@ -31,10 +31,22 @@
 
 .main-wrap {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.main__content, .main__scroll {
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
+
+.main__content {
+  flex-grow: 1;
+}
+
 
 .scroll-btn {
   width: 130px;
@@ -43,6 +55,5 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  position: absolute;
-  bottom: 40px;
+  margin-top: 100px;
 }
