--- a/style/sections/sectionMap.scss
+++ b/style/sections/sectionMap.scss
@@ -68,6 +68,10 @@
   flex-grow: 1;
 }
 
+.socials__item {
+  margin-left: 20px;
+}
+
 .socials__icon {
   background-position: center;
   background-repeat: no-repeat;
@@ -76,7 +80,7 @@
   height: 20px;
   opacity: 0.4;
   transition: all 0.2s;
-  margin-left: 20px;
+  display: block;
 
     &:hover {
       opacity: 1;
