--- a/style/sections/sectionForm.scss
+++ b/style/sections/sectionForm.scss
@@ -71,6 +71,8 @@
 .delivery__input_textarea {
   height: 110px;
   margin-bottom: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .delivery__type-of-pay{
