--- a/style/layout/settings.scss
+++ b/style/layout/settings.scss
@@ -59,3 +59,16 @@ button {
   cursor: pointer;
 }
 
+.wrap {
+  height: 100%;
+  min-height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.scroll-window {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  min-height: 100%;
+}
