--- a/style/sections/aside.scss
+++ b/style/sections/aside.scss
@@ -1,4 +1,4 @@
-.aside_link {
+.aside__link {
   position: relative;
   width: 6px;
   height: 6px;
@@ -33,4 +33,13 @@
   top: 80px;
   right: 55px;
   z-index: 2;
+}
+
+.aside__link_active {
+
+  &::before {
+      width: 15px;
+      height: 15px;
+    }
+
 }
