--- a/style/sections/sectionTeam.scss
+++ b/style/sections/sectionTeam.scss
@@ -43,29 +43,45 @@
   color: $white;
   text-transform: uppercase;
   position: relative;
-
-    &:before {
-    content: '';
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid $yellow;
-    border-bottom: 5px solid transparent;
-    position: absolute;
-    left: -20px;
-    top: 50%;
-    transform: translateY(-25%);
-  }
 }
 
-//accordeon
+.team__triangle {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid $yellow;
+  border-bottom: none;
+  position: absolute;
+  left: -20px;
+  top: 50%;
+  transform: translateY(-25%);
+  transition: transform 0.4s;
+}
+
+//accordion
+
+.team__member_active {
+  color: $yellow;
+
+  .team__triangle {
+    transform: rotate(180deg);
+  }
+
+  +.team__drop {
+  max-height: 100px;
+  margin-top: 15px;
+  }
+
+}
 
 .team__drop {
   width: 365px;
-  margin-top: 15px;
-  display: none;
+  max-height: 0;
+  transition: all 0.4s;
+  overflow: hidden;
 }
+
 
 .team__img {
   width: 100px;
