--- a/style/layout/settings.scss
+++ b/style/layout/settings.scss
@@ -64,6 +64,7 @@ button {
   min-height: 100%;
   overflow: hidden;
   position: relative;
+  min-height: 650px;
 }
 
 .scroll-window {
@@ -71,4 +72,5 @@ button {
   top: 0;
   height: 100%;
   min-height: 100%;
+  min-height: 650px;
 }
