--- a/style/sections/sectionBullets.scss
+++ b/style/sections/sectionBullets.scss
@@ -7,13 +7,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .main-section__heading {
   @include heading-text($black);
   text-align: center;
-  margin-top: 90px;
+  line-height: 1;
 }
 
 .benefits__list {
